--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <head>
   <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="styles.processed.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=vollkorn|B612|Anonymous Pro">
    <link
  rel="stylesheet"
