--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="styles.processed.css">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link
   rel="stylesheet"
