added mobile friendly design, added about content, and minor changes

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 <head>
   <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=vollkorn|B612|Anonymous Pro">
+  <link rel="stylesheet" href="styles.processed.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital@0;1&family=Space+Mono&display=swap" rel="stylesheet">
+
    <link
  rel="stylesheet"
  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -24,9 +26,23 @@
          <a class="back" href="index.html"><i class="fas fa-arrow-circle-left"></i></a>
          <div class="about-content">
 <!--              <a href="index.html"> Back </a> -->
-           <p>My name's Ali Raza and I'm currently a second year electrical engineering student at McMaster University.</p>
-            <h3>Education</h3>
-            <h3>Skills</h3>
+           <p style="color:yellow;">My name's Ali Raza, and I'm an aspiring software (or perhaps electrical) engineer. I've got one too many hobbies, but prominent ones have to include working out 🏋🏻‍♂️, playing video games 🎮, reading books 📕, playing basketball 🏀, and just jamming out to some music 🎶.</p>
+            <p style="color:yellow;">I also love learning and taking on challenges. If there's a problem, I look for solutions. Whether it means hunkering down for hours trying to fix some code, or learning an entirely new skill to address it. Throughout the years I've grown to become an excellent problem-solver and learner.  </p>
+            <h3 style="margin-top: 5%;">Education</h3>
+            <p style="font-weight: bold;">Electrical Engineering (B.Eng) - McMaster University</p>
+            <p  style="font-style: italic;">(2019-2023)</p>
+             <p style="font-weight: bold; margin-top:4%;">Highschool Diploma - Mississauga Secondary School</p>
+            <p style="font-style: italic">(2015-2019)</p>
+            <h3 style="margin-top: 5%;">Skills</h3>
+            <div class="skills">
+               <ul>
+                  <li>Python</li>
+                  <li>Java</li>
+                  <li>C</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Dart</li>
+            </div>
       </div>
 
    </div>
