--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.processed.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link
   rel="stylesheet"
@@ -8,29 +8,17 @@
   integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
   crossorigin="anonymous"
 />
-  <link rel="stylesheet"        href="https://fonts.googleapis.com/cssfamily=B612|Inconsolata|Droid+Sans">
- <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=B612&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=B612&family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital@0;1&family=Space+Mono&display=swap" rel="stylesheet">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 </head>
 
 <body>
   <div class="container">
-<!--     <div id="navbar">
-      <ul>
-        <li><a id = "nav" href="url">link text</a></li>
-        <li><a  id = "nav" href="url">link text</a></li>
-        <li><a  id = "nav" href="url">link text</a></li>
-        <li><a  id = "nav" href="url">link text</a></li>
-      </ul>
-
-    </div> -->
-    <div id="welcome-section">
-      <h1>Hey There,</h1>
+   <div id="welcome-section">
+      <h1>Hey There.</h1>
       <h3>I'm Ali!</h3>
       <a href="about.html"><h3  id="about-header">About me</h3></a>
     </div>
@@ -53,13 +41,13 @@
         <a href="url">Coming Soon!</a>
       </div>
     </div>
-    <div class="contact">
-      <div class="contact-header">
+
+    <div id="contact">
+      <div id="contact-header">
         <h2>Lets Work Together!</h2>
         <h4> How do you take your coffee? </h4>
       </div>
       <div class="contact-links">
-        <div class="contact-links">
     <a
       href="https://www.linkedin.com/in/aliraza-/"
       target="_blank"
@@ -75,16 +63,16 @@
     >
     <a href="mailto:razas21@mcmaster.ca" class="btn contact-details"
       ><i class="fas fa-at"></i></a>
-    <a href="tel:647-527-6578" class="btn contact-details"
+    <a href="tel:555-555-5555" class="btn contact-details"
       ><i class="fas fa-mobile-alt"></i></a
     >
   </div>
-      </div>
     </div>
-    <div class="footer">
 
-      <h4 style="color:red;"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by Ali Raza</h4>
+    <div class="footer">
+      <h4 style="color:yellow;"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by Ali Raza</h4>
       <h5>(This website is still in development!)</h5>
     </div>
+
   </div>
 </body>
