--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <head>
   <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="styles.processed.css">
+  <link rel="stylesheet" href="style.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital@0;1&family=Space+Mono&display=swap" rel="stylesheet">
 
