--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
          <a class="back" href="index.html"><i class="fas fa-arrow-circle-left"></i></a>
          <div class="about-content">
 <!--              <a href="index.html"> Back </a> -->
-           <p style="color:yellow;">My name's Ali Raza, and I'm an aspiring software (or perhaps electrical) engineer. I've got one too many hobbies, but prominent ones have to include working out 🏋🏻‍♂️, playing video games 🎮, reading books 📕, playing basketball 🏀, and just jamming out to some music 🎶.</p>
-            <p style="color:yellow;">I also love learning and taking on challenges. If there's a problem, I look for solutions. Whether it means hunkering down for hours trying to fix some code, or learning an entirely new skill to address it. Throughout the years I've grown to become an excellent problem-solver and learner.  </p>
+           <p style="color:yellow;">My name's Ali Raza, and I'm an aspiring software (or perhaps electrical) engineer. Some of my hobbies/interests include working out 🏋, playing video games 🎮, reading books 📕, playing basketball 🏀, and just jamming out to some music 🎶.</p>
+            <p style="color:yellow;">I also love learning and taking on challenges. If there's a problem, I look for solutions. Whether it means hunkering down for hours trying to fix some code, or learning an entirely new skill to address it. More than anything (especially as an undergrad), I'm always eager to learn new things and am willing to put in as much effort needed in doing so!</p>
             <h3 style="margin-top: 5%;">Education</h3>
             <p style="font-weight: bold;">Electrical Engineering (B.Eng) - McMaster University</p>
             <p  style="font-style: italic;">(2019-2023)</p>
