--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="url">Coming Soon!</a>
       </div>
       <div class="project-tile">
-        <a href="url">Coming Soon!</a>
+        <a href="https://github.com/razas21" style="font-weight: bolder;">Check out my GitHub!</a>
       </div>
       <div class="project-tile">
         <a href="url">Coming Soon!</a>
@@ -63,7 +63,7 @@
     >
     <a href="mailto:razas21@mcmaster.ca" class="btn contact-details"
       ><i class="fas fa-at"></i></a>
-    <a href="tel:555-555-5555" class="btn contact-details"
+    <a href="tel:647-527-6578" class="btn contact-details"
       ><i class="fas fa-mobile-alt"></i></a
     >
   </div>
